Bug Fix: CSS Line Spacing

--- a/web/mobile/style.css
+++ b/web/mobile/style.css
@@ -6750,7 +6750,7 @@ aside.sidebar .kopa-widget-advanced_search .widget-title:before {
 
 .widget-header h4 {
     font-size: 15px;
-    line-height: 36px;
+    line-height: 18px;
     letter-spacing: 0.5px;
     text-transform: none;
     font-weight: normal;
